package com.fitech.account.model;

import com.fitech.base.model.FTObject;

/**
 * Created by chun on 2017/2/16.
 */
public abstract class FAField extends FTObject{

}
