package com.fitech.ledger.model;

import com.fitech.account.model.FAReport;

/**
 * Created by chun on 2017/2/16.
 */
public class FALedgerReport extends FAReport{
}
