package com.fitech.ledger.model;

import com.fitech.account.model.FAReportTemplate;

/**
 * Created by chun on 2017/2/16.
 */
public class FALedgerReportTemplate extends FAReportTemplate{
}
