package com.fitech.ledger.model;

import com.fitech.account.model.FARow;

/**
 * Created by chun on 2017/2/16.
 */
public class FALedgerRow extends FARow {
}
