package com.fitech.ledger.model;

import com.fitech.account.model.FARowTemplate;

/**
 * Created by chun on 2017/2/16.
 */
public class FALedgerRowTemplate extends FARowTemplate {
}
