@startuml
package com.fitech.base.model {
  class FBEntity
  class FBSubject
  class FBObject
}

package com.fitech.account.model {
  abstract class FAObject
  abstract class FAReport
  abstract class FARow
  class FAField
  abstract class FAReportTemplate
  abstract class FARowTemplate
  class FAFieldType
}

package com.fitech.account.ledger.model {
  class FALedgerReport
  class FALedgerRow
  class FALedgerReportTemplate
  class FALedgerRowTemplate
}

FBEntity <|-- FBObject
FBEntity <|-- FBSubject

FBObject <|-- FAObject
FAObject <|-- FAReport
FAObject <|-- FARow
FAObject <|-- FAField
FAObject <|-- FAReportTemplate
FAObject <|-- FARowTemplate
FAObject <|-- FAFieldType


FAReport <|-- FALedgerReport
FARow <|-- FALedgerRow
FAReportTemplate <|-- FALedgerReportTemplate
FARowTemplate <|-- FALedgerRowTemplate

FAReport "1" *-- "many" FARow : cotains >
FARow "1" *-- "many" FAField : cotains >
FAField "1" --> FAFieldType : comes from >
FAReport "1" --> "0..1" FAReportTemplate : associates >
FARow "1" --> "1" FARowTemplate : comes from >
FAReportTemplate "1" *-- "1" FARowTemplate : contains <
FARowTemplate "1" *-- "many" FAFieldType : contains >
@enduml